Update code coverage